--- a/style/style.scss
+++ b/style/style.scss
@@ -127,7 +127,7 @@
             font-size: $fontsizetext;
             color: $secondarycolor;
         }
-        .resultado{
+        #resultado, #resultadoextra{
             font-size: $fontsizeh2;
         }
 
@@ -275,7 +275,7 @@
     background-color: $primarycolor;
     color: $white;
     width: 95%;
-    height: 200px;
+    height: 250px;
     margin-left: 3vw;
     display: flex;
     flex-direction: column;
@@ -289,7 +289,7 @@
             font-size: $fontsizetext;
             color: $secondarycolor;
         }
-        .resultado{
+        #resultado, #resultadoextra{
             font-size: $fontsizeh2;
         }
 
